<resources>
    <string name="app_name">Kozirase</string>
    <string name="Person1_name">ジミン</string>
    <string name="person2_name">ジン</string>
    <string name="putText_Person1">ここにテキストを入力してね。</string>
    <string name="putText_Person2">ここにテキストを入力してね。</string>
    <string name="your_heartrate">Your heart rate</string>
    <string name="todo">To do</string>
    <string name="add_further_info">add further info</string>
    <string name="sign_out">sign out</string>
    <string name="your_barameter">Your Parameter</string>
    <string name="small">small</string>
    <string name="smallheatmark">smallHeatMark</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">ログイン</string>
    <string name="logout">ログアウト</string>
    <string name="recordnewevents">新しいイベントを記録</string>
    <string name="your_heart_rate">Your Heart rate</string>
    <string name="your_messages">Your Messages</string>
    <string name="recordnewmessages">新しいメッセージを記録</string>
    <string name="welcome">ようこそ</string>
    <string name="login_failed">ログイン失敗</string>
    <string name="invalid_username">無効なユーザー名</string>
    <string name="invalid_password">無効なパスワード</string>
    <string name="log_up">登録</string>
    <string name="your_messages1">Your messages</string>
    <string name="text_analysis">Text Analysis</string>
    <string name="your_heartrate1">Your Heartrate</string>
    <string name="button_logout">ログアウト</string>
    <string name="savetext">登録</string>
    <string name="Login">TODO</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="text_analyst">分析</string>
    <string name="analyst_result">分析結果</string>
    <!--TODO: string value for heart rate, todo, add further info, sign out and your parameters are setting for testing-->
</resources>