<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TextInputActivity">

    <ScrollView
        android:id="@+id/scrollView_text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:isScrollContainer="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:id="@+id/LinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name_person1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="41dp"
                android:layout_marginTop="32dp"
                android:text="@string/Person1_name"
                android:textSize="24sp"
                android:textStyle="bold"/>
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintTop_toTopOf="parent" />-->


            <!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintHorizontal_bias="0.0"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintTop_toBottomOf="@+id/name_Person1" />-->

            <!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintHorizontal_bias="0.5"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintTop_toBottomOf="@+id/name_person2" />-->

            <EditText
                android:id="@+id/putText_Person2"
                android:layout_width="328dp"
                android:layout_height="290dp"
                android:layout_marginStart="41dp"
                android:layout_marginTop="12dp"
                android:autofillHints=""
                android:background="@drawable/textview_border"
                android:inputType="textLongMessage"
                android:padding="10dp"
                android:gravity="top|left"
                android:text="@string/putText_Person2" />

            <TextView
                android:id="@+id/name_Person2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="41dp"
                android:layout_marginTop="32dp"
                android:text="@string/person2_name"
                android:textSize="24sp"
                android:textStyle="bold" />
            <!--                app:layout_constraintStart_toStartOf="parent"-->
            <!--                app:layout_constraintTop_toBottomOf="@+id/putText_Person1"-->

            <EditText
                android:id="@+id/putText_Person1"
                android:layout_width="326dp"
                android:layout_height="290dp"
                android:layout_marginStart="41dp"
                android:layout_marginTop="16dp"
                android:width="3dp"
                android:background="@drawable/textview_border"
                android:inputType="textLongMessage"
                android:outlineProvider="background"
                android:padding="10dp"
                android:gravity="top|left"
                android:text="@string/putText_Person1"
                android:importantForAutofill="no" />



            <Button
                android:id="@+id/button_to_score_page"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="160dp"
                android:layout_marginTop="16dp"
                android:stateListAnimator="@null"
                android:text="@string/savetext"
                android:textAllCaps="false"
                app:backgroundTint="#9A969D" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>